Change all callers of nsIPresContext::GetShell() to use the non-refcounting versions.  Most callers now use PresShell(), a few that were checking for null conditions are using GetPresShell() -- this will be remedied once we can ensure that a prescontext never has a null pres shell.  Bug 227690, r+sr=bzbarsky.